[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "coverage_path_planner"
version = "1.1.3"
description = "Complete Coverage Path Planner (CCPP) with a focus on visual results and geometric precision (inspiered by CaSSAndRA project)"
readme = "README.md"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.expand-macos-universal-tags = true
install.strip = true